[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/extractors",
    "crates/downloaders",
    "crates/postprocessors",
    "crates/networking",
    "crates/jsinterp",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/user/yt-dlp-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP & networking
bytes = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"

# HTML/XML parsing
scraper = "0.22"
quick-xml = { version = "0.37", features = ["serialize"] }

# Regex
regex = "1"
fancy-regex = "0.14"

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"

# JS engine
boa_engine = "0.20"

# Media formats
m3u8-rs = "6"
dash-mpd = { version = "0.17", default-features = false }

# Progress & logging
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto (for HLS AES-128 decryption)
aes = "0.8"
cbc = "0.1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
toml = "0.8"
shellexpand = "3"

# Internal crates
yt-dlp-core = { path = "crates/core" }
yt-dlp-cli = { path = "crates/cli" }
yt-dlp-extractors = { path = "crates/extractors" }
yt-dlp-downloaders = { path = "crates/downloaders" }
yt-dlp-postprocessors = { path = "crates/postprocessors" }
yt-dlp-networking = { path = "crates/networking" }
yt-dlp-jsinterp = { path = "crates/jsinterp" }
