[package]
name = "yt-dlp-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3"
