[package]
name = "yt-dlp-downloaders"
version.workspace = true
edition.workspace = true

[dependencies]
yt-dlp-core = { workspace = true }
yt-dlp-networking = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
m3u8-rs = { workspace = true }
dash-mpd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
