[package]
name = "yt-dlp-extractors"
version.workspace = true
edition.workspace = true

[dependencies]
yt-dlp-core = { workspace = true }
yt-dlp-networking = { workspace = true }
yt-dlp-jsinterp = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }
scraper = { workspace = true }
quick-xml = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
