[package]
name = "yt-dlp-jsinterp"
version.workspace = true
edition.workspace = true

[dependencies]
yt-dlp-core = { workspace = true }

boa_engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
