[package]
name = "yt-dlp-networking"
version.workspace = true
edition.workspace = true

[dependencies]
yt-dlp-core = { workspace = true }

bytes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
