[package]
name = "yt-dlp-postprocessors"
version.workspace = true
edition.workspace = true

[dependencies]
yt-dlp-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tempfile = "3"
